fixed search context and few css issues on iphone

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -847,7 +847,7 @@ input#signup-submit {
 }
 @media (max-width: 767px){
     .container {
-        padding: 0 25px;
+        padding: 0 15px;
     }
 }
 
@@ -1051,11 +1051,11 @@ ul.social-links {
     line-height: 42px;
 }
 
-@media (max-width: 767px) {
+/* @media (max-width: 767px) {
     #hero .hero-text .title {
         font-size: 36px;
     }
-}
+} */
 
 .hero-text .title strong {
     font-family: 'Avenir-Heavy', sans-serif;
@@ -1307,13 +1307,6 @@ ul.social-links {
 @media screen and (max-width: 599px) {
     .home-banner-wrapper {
         height: 120vh;
-    }
-    /* .home-banner-wrapper .main-title{ padding: 25px 15px 0 15px;} */
-    .home-banner-wrapper p {
-        font-size: 14px;
-    }
-    .home-banner-wrapper .title {
-        font-size: 34px;
     }
 }
 
