--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -116,7 +116,7 @@
 // home page styles
 // @media (max-width: 767px){
     .home-banner-wrapper{
-        height: 400px;
+        height: 700px;
         background-size: cover;
         width: 100%;
         left: 0;
@@ -131,7 +131,7 @@
         p{
             max-width: 100%;
             @media (min-width: 768px){
-                max-width: 310px;
+                max-width: 350px;
                 margin: 0;
                 line-height: 24px;
                 font-size: 17.5px;
